--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ We've designated 14% for regular burns to maintain token value and control infla
                                         <a href="#"><img src="assets/images/logoc.png" alt=""/></a>
                                     </div>
                                     <div class="copiright_text pl-40">
-                                        Copyright © 2023
+                                        All Rights Reserved for Doge Black AI © 2024
                                     </div>
                                 </div>
                                 <a href="#" class="bact_to_top_btn"><img src="assets/images/icon/back_to_top.svg" alt="" /></a>
