--- a/announcement.html
+++ b/announcement.html
@@ -158,7 +158,7 @@
                                 <p>Be among those who will have a share in a 2,00 USDT worth DBlack AI Tokens distribution. Click the button below and follow ALL BOT'S INSTRUCTIONS. <br>
                                     
                                 <div class="join_comunity_btns">
-                                    <a href="https://t.me/DBLACKAI_Bot" target="_blank">
+                                    <a href="#" target="_blank">
                                         <button class="wishlist_btn hov_shape_show uppercase">
                                             JOIN THE AIR DROP
                                             <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
