--- a/announcement.html
+++ b/announcement.html
@@ -160,7 +160,7 @@
                                 <div class="join_comunity_btns">
                                     <a href="#" target="_blank">
                                         <button class="wishlist_btn hov_shape_show uppercase">
-                                            JOIN THE AIR DROP
+                                            JOIN AIR DROP
                                             <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
                                             <span class="hov_shape2"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
                                             <span class="square_hov_shape_dark"></span>
