--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <div class="dogeblack_v1_baner_buttons mt-43">
                                 <a href="https://docs.dogeblackai.net" target="_blank">
                                     <button class="mint_btn hov_shape_show">
-                                        READ WHITEPAPER
+                                        WHITEPAPER
                                         <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
                                         <span class="hov_shape2"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
                                         <span class="square_hov_shape_dark"></span>
@@ -355,7 +355,7 @@
 
                         <div class="col-md-4 mb-30">
                             <div class="about_us_text_card">
-                                <h3><img src="assets/images/icon/aboutus_card_icon3.png" alt="icon" />Governance Protocol</h3>
+                                <h3><img src="assets/images/icon/aboutus_card_icon3.png" alt="icon" />Governance Token</h3>
                                 <p style="text-align: center;">Token holders may have veto or approval power over protocol updates, changes to consensus rules, among other technical aspects.</p>
                             </div>
                         </div>
