--- a/index.html
+++ b/index.html
@@ -381,18 +381,31 @@
                                 <h3 class="uppercase">Tokenomics</h3>
                             </div>
                             <div style="margin-top: 20px; text-align: justify;">
-                                <p>DogeBlack AI's tokenomics, with a grand total of 5 billion tokens, is smartly constructed to fuel our ecosystem. The Marketing and Development Wallets hold 10% and 1% respectively, driving branding and technical advancements. </p>
+                                <p>DogeBlack AI's tokenomics, with a grand total of 5,000,000,000 tokens, is smartly constructed to fuel our ecosystem. The Marketing (2%) and Development (1%) Wallets hold 3%, driving branding and technical advancements. </p>
                                 <br>
                                 <p>
 
-A substantial 25% is allocated for CEX listings, endorsing a varied trading platform for users. Presale holds 30%, boosting community engagement and initial fundraising. To ensure fluid transactions, 10% is dedicated to PancakeSwap liquidity.</p>
+3% is allocated for CEX listings, endorsing a varied trading platform for users. Presale holds 14% for the initial fund raising. For boosting community engagement we set apart 0.5% for an Airdrop. To ensure fluid transactions, 10% is dedicated to PancakeSwap liquidity.</p>
                                 <br>
                                 <p>
 
-We've designated 14% for regular burns to maintain token value and control inflation. Overall, DogeBlack AI's tokenomics signifies our dedication to a thriving, balanced, and profitable ecosystem.</p>    
+We've designated 50% for an initial burn prior launching, this burning aims to encrease the potencial growing of the initial marketcap at launching. 19.5% are allocated for regular burns to maintain token value and control inflation. Overall, DogeBlack AI's tokenomics signifies our dedication to a thriving, balanced, and profitable ecosystem.</p>    
                             <br>
                             <p>
-                              Our token will have a fee of 3% for purchases and 5% for sales, Please note that unsold tokens will be burned.</p>
+                              Our token will have a fee of 3% for purchases and 5% for sales. ALL unsold tokens will be burned before launching.</p>
+                            <br>
+                            <p>Click below and check our tokenomics in details.</p>
+                        </div>
+                            <div class="dogeblack_v1_baner_buttons mt-43">
+                                
+                                <a href="https://docs.google.com/spreadsheets/d/1ixX3g8_XyhL7sTpAIbhYE-G-pb0mmiOzpr_WHJXYPvE/edit?usp=sharing" target="_blank">
+                                    <button class="mint_btn hov_shape_show">
+                                        TOKENOMICS SPREADSHEET
+                                        <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
+                                        <span class="hov_shape2"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
+                                        <span class="square_hov_shape_dark"></span>
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -586,7 +599,7 @@ We've designated 14% for regular burns to maintain token value and control infla
                                 <p>We will first be available through Pink public sale. Once launched, you can purchase it on PancakeSwap and major Centralized Exchanges (CEX). More details about purchasing will be announced on our website and social media channels..</p>
                             </div>
 
-                            <h2 class="accordion">
+                            <!--<h2 class="accordion">
                                 How does DogeBlack AI MemeCoin support charitable causes?
                                 <span>
                                     <img src="assets/images/icon/plus.svg" alt="" class="img-fluid IconPlus">
@@ -595,7 +608,7 @@ We've designated 14% for regular burns to maintain token value and control infla
                             </h2>
                             <div class="accordion-panel">
                                 <p>We believe in giving back to the community. A certain percentage of each DogeBlack AI MemeCoin transaction goes to support charitable causes that align with values of inclusivity, education, and social welfare. This means that by investing in DogeBlack AI MemeCoin, you're not just investing in a promising digital currency but also contributing to positive societal impact.</p>
-                            </div>
+                            </div>-->
 
                             <h2 class="accordion">
                                 How can I become a part of the DogeBlack AI MemeCoin community?
