--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <li><a href="#home">Home</a></li>
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#features">Features</a></li>
-                                <li><a href="#tokenomics">Tokenomics</a></li>
+                                <li><a href="#">Tokenomics</a></li>
                                 <li><a href="#roadmap">Roadmap</a></li>
                                 <li><a href="#faq">FAQ</a></li>
                                 <li><a href="announcement.html"target="_blank">Announcement</a></li>
