--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             </div>
 
                             <div class="dogeblack_v1_baner_buttons mt-43">
-                                <a href="https://docs.dogeblackai.net" target="_blank">
+                                <a href="https://dogeblackai-whitepaper.gitbook.io/whitepaper/" target="_blank">
                                     <button class="mint_btn hov_shape_show">
                                         WHITEPAPER
                                         <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L_dark.svg" alt="" /></span>
@@ -488,9 +488,10 @@ We've designated 50% for an initial burn prior launching, this burning aims to e
                             <div class="v4roadmap_text mt-31 v4roadmap_text_right">
                                 <h4 class="mb-28">Phase 03</h4>
                                 <ul>
-                                    <li><span class="icon_munies"></span> Staking Initiation</li>
                                     <li><span class="icon_munies"></span>Community Contests</li>
                                     <li><span class="icon_munies"></span>Strategic Partnerships</li>
+                                    <li><span class="icon_munies"></span>Global Meetups and Conferences</li>
+                                    <li><span class="icon_munies"></span>Mobile App Launch</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -509,8 +510,6 @@ We've designated 50% for an initial burn prior launching, this burning aims to e
                                     <li>Swap Protocol Integration<span class="icon_munies"></span></li>
                                     <li>AI DeFi Solutions Development<span class="icon_munies"></span></li>
                                     <li>AI Bot Development<span class="icon_munies"></span></li>
-                                    <li>Mobile App Launch<span class="icon_munies"></span></li>
-                                    <li>Global Meetups and Conferences<span class="icon_munies"></span></li>
                                     <li>Continuous Product Development<span class="icon_munies"></span></li>
                                 </ul>
                             </div>
