--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     </button>
                                 </a>
 
-                                <a href="#" target="_blank">
+                                <a href="https://t.me/DBLACKAI_Bot" target="_blank">
                                     <button class="mint_btn hov_shape_show">
                                         Join AIRDROP
                                         <span class="hov_shape1"><img src="assets/images/icon/hov_shape_L.svg" alt="" /></span>
